table overflow fix

--- a/src/main.scss
+++ b/src/main.scss
@@ -48,7 +48,7 @@ main.is-fit-screen {
 
 .is-auto-overflow-vertical {
     max-height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 /* /Layout
